# personal-website

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .typos.toml  COCKTAILS.md  COMMANDS.md  Gemfile  LICENSE  README.md  Rakefile  add_placeholder_images.sh  config.rb  config.yaml  deploy  generate_egg_puns.py  get_meditations.py  get_wordle_words.py  go.mod  go.sum  goodreads_export.commit  hugo_stats.json  package-lock.json  package.json  postcss.config.js  pyproject.toml  remove_location_data_from_images.sh  test_website.sh  update_website.sh
archetypes/: blog.md  books.md  cocktails.md  food.md  projects.md  reviews.md
content/: _article_paginator.erb  _index.md  cv.html  food.html.erb  portfolio.html.erb  portfolio.md
content.backup/: _author_blurb.erb  cocktails.html.erb  projects.html.erb
csv/: delta.csv  source_of_truth.csv
data/: cocktails.json  cv.json  cv_all.json  cv_fr.json  eggs.json  greetings.json  meditations.json  ps2_games.json  review_categories.yaml  tag_mapping.json  wordle_words.json
data.backup/: review_categories.yaml  wordle_words.json
drafts/: darker_than_black.txt  functional_programming.txt  goemon.txt  learning.txt  natural_selection_two_guide.txt  open_world_games.txt  programming_as_the_martial_arts_of_the_mind.txt  scala_2.txt  the_programmer_code.txt  what_is_programming.txt  xcom.txt  zero_appreciation_zero_participation.txt
helpers/: CustomHelpers.rb
imported_csvs/: export_2024_25_04.csv  export_2024_25_05.csv
latex/: test1.tex
layouts/: blogpost_blog.erb  blogpost_food.html  blogpost_project.erb  (+2 more)
(+2003 files in other folders)
