[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = ""
authors = ["Bill Tyros <me@strategineer.com>"]
readme = "README.md"
packages = [{include = "personal_website"}]

[tool.poetry.dependencies]
python = "^3.10"
isbntools = "^4.3.29"
python-frontmatter = "^1.1.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
