[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = ""
authors = ["Bill Tyros <me@strategineer.com>"]
readme = "README.md"
packages = [{include = "personal_website"}]

[tool.poetry.dependencies]
python = "^3.10"
isbnlib = "^3.10.14"
python-frontmatter = "^1.1.0"
click = "^8.1.7"
requests = "^2.31.0"
mergedeep = "^1.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
