[tool.poetry]
name = "mycli"
version = "0.1.0"
description = ""
authors = ["Bill Tyros <me@strategineer.com>"]
readme = "README.md"
packages = [{include = "mycli"}]

[tool.poetry.dependencies]
python = "^3.10"
isbnlib = "^3.10.14"
python-frontmatter = "^1.1.0"
click = "^8.1.7"
requests = "^2.31.0"
mergedeep = "^1.3.4"
beautifulsoup4 = "^4.12.3"
pillow = "^10.3.0"
csv-diff = "^1.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"